src/styles/styles.css
#div_callcollection{
    background-color: transparent;
    position: fixed;
    top: 0px;
    left: 0px;
    width: calc(100% - 10px);
    height: calc(100% - 10px);
    pointer-events: none;
    /* padding: 5px; */
}

#div_call_indv{
    position: fixed;
    background-color: rgba(0, 0, 0, 0.9);
    width: 100%;
    min-height: 170px;
    max-width: 300px;
    border-radius: 5px;
    pointer-events: fill;
    color: white;
    border: solid 1px rgb(210, 210, 210);
}

#div_top_nav_call_window{
    background-color: transparent;
    width: calc(100% - 10px);
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    gap: 2px;
    padding: 5px;
    padding-top: 7px;
    z-index: 2;
}


#span_call_displayname{
    font-size: 12px;
    display: flex;
    flex: 1;
    text-align: left;
    padding-left: 10px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: left;
}

.btn_top_nav_call_window{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30px;
    height: 25px;
    background-color: transparent;
    border: none;
    cursor: pointer;
}

#div_call_controls{
    background-color: transparent;
    width: calc(100% - 10px);
    position: absolute;
    bottom: 0px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    padding: 5px;
    padding-bottom: 10px;
    gap: 5px;
    align-items: center;
    justify-content: center;
}

.btn_call_controls{
    width: 45px;
    height: 30px;
    border-radius: 10px;
    border: none;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 17px;
}

.btn_call_controls_enable{
    background-color: #888;
}

.btn_call_controls_end{
    background-color: red;
    color: white;
}

.div_callwindow_content_not_answered{
    background-color: transparent;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    z-index: -1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.span_callwindow_content_not_answered_label{
    font-size: 12px;
    user-select: none;
}

.div_video_blocks_holder{
    background-color: transparent;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    z-index: -1;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.div_video_blocks{
    width: 100%;
    max-width: 270px;
    height: 100%;
    max-height: 150px;
    background-color: #3d4043;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
}

.video_call_display{
    width: 100%;
    height: 100%;
}

#div_login{
    width: 100%;
    height: 100%;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
}

#div_login_form{
    background-color: #1c7DEF;
    width: 95%;
    max-width: 430px;
    border-radius: 20px;
    padding-left: 0px;
    padding-right: 0px;
    overflow-y: hidden;
    display: flex;
    flex-direction: column;
    z-index: 1;
}

#span_login_label{
    font-size: 25px;
    font-weight: bold;
    color: white;
    margin-bottom: 10px;
    user-select: none;
}

#div_img_icon_login_container{
    background-color: #1c7DEF;
    width: 100%;
    height: 100%;
    max-width: 120px;
    max-height: 120px;
    min-height: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 120px;
    align-self: center;
    margin-bottom: -50px;
    z-index: 1;
}

#img_icon_login{
    width: 95%;
    height: 95%;
    max-width: 100px;
    max-height: 100px;
}

#div_login_form_inputs{
    width: calc(100% - 20px);
    height: auto;
    padding: 10px;
    padding-top: 75px;
    background-color: #DFDFDF;
    border-radius: 20px;
    min-height: 100px;
}

#div_inputs_container{
    display: flex;
    flex-direction: column;
    gap: 15px;
    width: calc(100% - 20px);
    padding-left: 10px;
    padding-right: 10px;
    align-items: center;
}

.inputs_login{
    width: calc(95% - 30px);
    max-width: calc(330px - 30px);
    height: 35px;
    border-radius: 10px;
    border: none;
    padding-left: 15px;
    padding-right: 15px;
    font-size: 13px;
}

#btn_login{
    width: 95%;
    max-width: 120px;
    height: 35px;
    border: none;
    border-radius: 10px;
    color: white;
    background-color: #1c7DEF;
    cursor: pointer;
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 13px;
    font-weight: bold;
}

#div_question_label_login{
    width: 100%;
    padding-top: 10px;
    padding-bottom: 20px;
    display: flex;
    gap: 5px;
    justify-content: center;
    align-items: center;
}

#span_question_label{
    font-size: 13px;
    color: #6A6A6A;
}

#span_sign_up_redirect{
    font-size: 13px;
    color: #1c7DEF;
    font-weight: bold;
    cursor: pointer;
    user-select: none;
}

#div_bubble1{
    width: 300px;
    height: 300px;
    border-radius: 300px;
    background-color: #1c7DEF;
    top: -80px;
    left: -80px;
    position: fixed;
}

#div_bubble2{
    width: 150px;
    height: 150px;
    border-radius: 150px;
    background-color: #B8B8B8;
    top: 225px;
    left: -30px;
    position: fixed;
}

#div_bubble3{
    width: 300px;
    height: 300px;
    border-radius: 300px;
    background-color: #1c7DEF;
    bottom: 125px;
    right: -80px;
    position: fixed;
}

#div_bubble4{
    width: 150px;
    height: 150px;
    border-radius: 150px;
    background-color: #B8B8B8;
    bottom: -30px;
    right: -30px;
    position: fixed;
}

/* REGISTER COMPONENT SECTION */

#div_register{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow-y: auto;
    background-color: white;
}
/* ... */

